lib/stringify-checked/tests/ui/stringify_expr/bad_literal.rs
use stringify_checked::stringify_expr;

fn main() {
    stringify_expr!(tralse);
}
